cmake_minimum_required(VERSION 3.25)
project(C__Primer)

set(CMAKE_CXX_STANDARD 11)

add_executable(C__Primer main.cpp)

add_executable(Question1.2 Chapter1/1.2.cpp)
add_executable(Question1.3 Chapter1/1.3.cpp)
add_executable(Question1.7 Chapter1/1.7.cpp)
add_executable(Question1.9 Chapter1/1.9.cpp)
add_executable(Question1.10 Chapter1/1.10.cpp)
add_executable(Question1.11 Chapter1/1.11.cpp)
add_executable(Question1.13 Chapter1/1.13.cpp)
add_executable(Question1.16 Chapter1/1.16.cpp)
add_executable(Question1.18 Chapter1/1.18.cpp)
add_executable(Question1.19 Chapter1/1.19.cpp)
add_executable(Question1.20 Chapter1/1.20.cpp)
add_executable(Question1.21 Chapter1/1.21.cpp)
add_executable(Question1.22 Chapter1/1.22.cpp)
add_executable(Question1.23 Chapter1/1.23.cpp)

add_executable(Question2.4 Chapter2/2.4.cpp)
add_executable(Question2.8 Chapter2/2.8.cpp)
add_executable(Question2.18 Chapter2/2.18.cpp)
add_executable(Question2.34 Chapter2/2.34.cpp)
add_executable(Question2.40 Chapter2/2.40.cpp)
add_executable(Question2.41 Chapter2/2.41.cpp)

add_executable(Question3.2 Chapter3/3.2.cpp)
add_executable(Question3.4 Chapter3/3.4.cpp)
add_executable(Question3.5 Chapter3/3.5.cpp)
add_executable(Question3.6 Chapter3/3.6.cpp)
add_executable(Question3.7 Chapter3/3.7.cpp)
add_executable(Question3.8 Chapter3/3.8.cpp)
add_executable(Question3.10 Chapter3/3.10.cpp)
add_executable(Question3.14 Chapter3/3.14.cpp)
add_executable(Question3.15 Chapter3/3.15.cpp)
add_executable(Question3.16 Chapter3/3.16.cpp)
add_executable(Question3.17 Chapter3/3.17.cpp)
add_executable(Question3.20 Chapter3/3.20.cpp)
add_executable(Question3.21 Chapter3/3.21.cpp)
add_executable(Question3.22 Chapter3/3.22.cpp)
add_executable(Question3.23 Chapter3/3.23.cpp)
add_executable(Question3.24 Chapter3/3.24.cpp)
add_executable(Question3.25 Chapter3/3.25.cpp)
add_executable(Question3.31 Chapter3/3.31.cpp)
add_executable(Question3.32 Chapter3/3.32.cpp)
add_executable(Question3.35 Chapter3/3.35.cpp)
add_executable(Question3.39 Chapter3/3.39.cpp)

